--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -1,19 +1,26 @@
 version: 3
+# https://www.runatlantis.io/docs/repo-level-atlantis-yaml.html#example-using-all-keys
+# forcing rodering
 # https://github.com/runatlantis/atlantis/pull/3292
 projects:
   - name: dev
     dir: "terraform/dev"
     autoplan:
       when_modified: ["*.tf"]
+      enabled: true
     execution_order_group: 1
   - name: qa
     dir: "terraform/qa"
     autoplan:
       when_modified: ["*.tf"]
+      enabled: true
     execution_order_group: 2
   - name: prd
+    apply_requirements: [ mergeable, approved, undiverged ]
+    import_requirements: [ mergeable, approved, undiverged ]
     dir: "terraform/prd"
     autoplan:
       when_modified: [ "*.tf" ]
+      enabled: true
     depends_on: ["qa"]
     execution_order_group: 3
