--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -21,6 +21,6 @@ projects:
     dir: "terraform/prd"
     autoplan:
       when_modified: [ "*.tf" ]
-      enabled: true
+      enabled: false
     depends_on: ["qa"]
     execution_order_group: 3
