--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -24,3 +24,9 @@ projects:
       enabled: false
     depends_on: ["qa"]
     execution_order_group: 3
+workflows:
+  production:
+    apply:
+      steps:
+          # this run is just for demo extra logic should be in seperated tool
+        - run: if [[ "${COMMENT_ARGS}" == "CR" ]]; then terraform apply "${PLANFILE}"; else echo "Pass CR as argument to deploy on prod" && exit 1; fi
