--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -16,8 +16,8 @@ projects:
       enabled: true
     execution_order_group: 2
   - name: prd
-    apply_requirements: [ mergeable, approved, undiverged ]
-    import_requirements: [ mergeable, approved, undiverged ]
+#    apply_requirements: [ mergeable, approved, undiverged ]
+#    import_requirements: [ mergeable, approved, undiverged ]
     dir: "terraform/prd"
     autoplan:
       when_modified: [ "*.tf" ]
