--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -32,7 +32,7 @@ workflows:
         - run: |
             set -x 
             echo "$COMMENT_ARGS"
-            if [[ "${COMMENT_ARGS}" == "CR" ]]; then 
+            if [ "${COMMENT_ARGS}" == "CR" ]; then 
               terraform apply "${PLANFILE}"; 
             else 
               echo "Pass CR as argument to deploy on prod" && exit 1; 
