--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -29,11 +29,13 @@ workflows:
     apply:
       steps:
           # this run is just for demo extra logic should be in seperated tool
-        - run: |
-            set -x 
-            echo "$COMMENT_ARGS"
-            if [ "${COMMENT_ARGS}" == "CR" ]; then 
-              terraform apply "${PLANFILE}"; 
-            else 
-              echo "Pass CR as argument to deploy on prod" && exit 1; 
-            fi
+        - run:
+            command: |
+              set -x 
+              echo "$COMMENT_ARGS"
+              if [ "${COMMENT_ARGS}" == "CR" ]; then 
+                terraform apply "${PLANFILE}"; 
+              else 
+                echo "Pass CR as argument to deploy on prod" && exit 1; 
+              fi
+            output: show
