--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -29,13 +29,13 @@ workflows:
     apply:
       steps:
           # this run is just for demo extra logic should be in seperated tool
-        - run:
-            command: |
-              set -x 
-              echo \"$COMMENT_ARGS\"
-              if [ ${COMMENT_ARGS}" = \"\C\R\" ]; then 
-                terraform apply ${PLANFILE}; 
-              else 
-                echo \"Pass CR as argument to deploy on prod\" && exit 1; 
-              fi
+        - run: prd-apply.sh
+#            command: |
+#              set -x
+#              echo \"$COMMENT_ARGS\"
+#              if [ ${COMMENT_ARGS}" = \"\C\R\" ]; then
+#                terraform apply ${PLANFILE};
+#              else
+#                echo \"Pass CR as argument to deploy on prod\" && exit 1;
+#              fi
 #            output: show
