--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -6,13 +6,13 @@ projects:
   - name: dev
     dir: "terraform/dev"
     autoplan:
-      when_modified: ["*.tf"]
+      when_modified: ["*.tf", "../modules/*"]
       enabled: true
     execution_order_group: 1
   - name: qa
     dir: "terraform/qa"
     autoplan:
-      when_modified: ["*.tf"]
+      when_modified: ["*.tf", "../modules/*"]
       enabled: true
     execution_order_group: 2
   - name: prd
@@ -20,7 +20,7 @@ projects:
 #    apply_requirements: [ mergeable, approved, undiverged ]
     dir: "terraform/prd"
     autoplan:
-      when_modified: [ "*.tf" ]
+      when_modified: [ "*.tf" , "../modules/*"]
       enabled: false
     depends_on: ["qa"]
     execution_order_group: 3
