--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -9,8 +9,10 @@ projects:
       when_modified: ["*.tf", "../modules/*"]
       enabled: true
     execution_order_group: 1
+    apply_requirements: [ mergeable ]
   - name: qa
     dir: "terraform/qa"
+    apply_requirements: [ mergeable ]
     autoplan:
       when_modified: ["*.tf", "../modules/*"]
       enabled: true
@@ -18,6 +20,7 @@ projects:
     depends_on: ["dev"]
   - name: prd
     workflow: production
+    apply_requirements: [ mergeable ]
 #    apply_requirements: [ mergeable, approved, undiverged ]
     dir: "terraform/prd"
     autoplan:
