--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -4,14 +4,14 @@ version: 3
 # https://github.com/runatlantis/atlantis/pull/3292
 projects:
   - name: dev
-    dir: "terraform/dev"
+    dir: "terraform/envs/dev"
     autoplan:
       when_modified: ["*.tf", "../modules/*"]
       enabled: true
     execution_order_group: 1
     apply_requirements: [ mergeable ]
   - name: qa
-    dir: "terraform/qa"
+    dir: "terraform/envs/qa"
     apply_requirements: [ mergeable ]
     autoplan:
       when_modified: ["*.tf", "../modules/*"]
@@ -22,7 +22,7 @@ projects:
     workflow: production
     apply_requirements: [ mergeable ]
 #    apply_requirements: [ mergeable, approved, undiverged ]
-    dir: "terraform/prd"
+    dir: "terraform/envs/prd"
     autoplan:
       when_modified: [ "*.tf" , "../modules/*"]
       enabled: true
